# integrator

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  README  bignum.c  bignum.h  bigrat.c  bigrat.h  coef_array.c  coef_array.h  configure.ac  euclidean.c  euclidean.h  hermite.c  hermite.h  int.l  int.y  poly_array.c  poly_array.h  polynomial.c  polynomial.h  prs.c  prs.h  ratfun.c  ratfun.h  simplify.c  simplify.h  squarefree.c  squarefree.h  tree.c  tree.h
src/: Makefile.am  bignum.c  bignum.h  bigrat.c  bigrat.h  coef_array.c  coef_array.h  euclidean.c  euclidean.h  hermite.c  hermite.h  int.l  integration.c  integration.h  lrt.c  lrt.h  parser.y  polynomial.c  polynomial.h  prs.c  prs.h  ratfun.c  ratfun.h  simplify.c  squarefree.c  squarefree.h  tree.c  tree.h  variables.c  variables.h
