# This file is part of Integrator
# (C) 2010 George Kettleborough
# All rights reserved (at least until the project is finished)
# 2010 Computer science final year project

BUILT_SOURCES = parser.h
AM_YFLAGS = -d

bin_PROGRAMS = integrator

integrator_SOURCES = int.l parser.y bignum.h bignum.c bigrat.h bigrat.c		\
	coef_array.h coef_array.c euclidean.h euclidean.c hermite.h hermite.c	\
	polynomial.h polynomial.c prs.h prs.c ratfun.h ratfun.c squarefree.h	\
	squarefree.c tree.h tree.c variables.h variables.c lrt.h lrt.c		\
	integration.h integration.c
